--- a/JobPortal/composer.json
+++ b/JobPortal/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "intervention/image": "^3.9",
+        "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
